@@ -23,3 +23,4 @@
 - move pmatch etc into struct mail to avoid pointer nonsense?
 - deliver to stdout
 - add some of the other non-useless stuff reformail can do, if any
+- write/append/pipe would benefit from add-from per stdout
