@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.54 2007-02-21 09:35:58 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.55 2007-02-22 10:31:47 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -502,9 +502,19 @@ match all action "rewrite" continue
 # this rule will cat the rewritten message
 match all action "cat"
 .Ed
-.Ic remove-header Ar name
+.It Ic remove-header Ar name
 Remove all occurances of header
 .Ar name .
+.It Ic append-string Ar string
+Append
+.Ar string
+to the mail.
+.It Ic stdout Op Ic add-from
+Write the mail to 
+.Em stdout .
+If
+.Ic add-from
+is specified, an mbox-style "From" line is prepended.
 .El
 .Sh RULES
 Rules are specified using the
