@@ -1,4 +1,4 @@
-/* $Id: fdm.h,v 1.203 2007-02-21 09:35:58 nicm Exp $ */
+/* $Id: fdm.h,v 1.204 2007-02-22 10:31:47 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -883,6 +883,11 @@ struct mbox_data {
 	int		 compress;
 };
 
+/* Deliver stdout data. */
+struct stdout_data {
+	int		 add_from;
+};
+
 /* match-age.c */
 extern struct match	 match_age;
 
@@ -931,6 +936,9 @@ extern struct fetch 	 fetch_imappipe;
 /* deliver-smtp.c */
 extern struct deliver	 deliver_smtp;
 
+/* deliver-smtp.c */
+extern struct deliver	 deliver_stdout;
+
 /* deliver-pipe.c */
 extern struct deliver 	 deliver_pipe;
 
@@ -945,6 +953,9 @@ extern struct deliver 	 deliver_maildir;
 
 /* deliver-remove-header.c */
 extern struct deliver	 deliver_remove_header;
+
+/* deliver-append-string.c */
+extern struct deliver	 deliver_append_string;
 
 /* deliver-mbox.c */
 extern struct deliver 	 deliver_mbox;
